--- a/src/templates/components/popups/popups.scss
+++ b/src/templates/components/popups/popups.scss
@@ -3,8 +3,8 @@
 	flex-direction: column;
 	max-width: 500px;
 	width: 100%;
-	background-color: $clr_wh;
-	color: $clr_dark_2;
+	background-color: $clr_white;
+	color: $clr_dark;
 	margin: auto;
 	padding: 40px 20px;
 
