--- a/src/templates/pages/ui-page.pug
+++ b/src/templates/pages/ui-page.pug
@@ -37,7 +37,7 @@ html(lang="ru")
 				.main-content
 					.container
 						+ui__kit()
-				.g-hidden
+				.g-hide
 					+popups()
 				footer.footer
 					.footer__inner
