--- a/src/assets/styles/layout/general.scss
+++ b/src/assets/styles/layout/general.scss
@@ -6,8 +6,8 @@ body {
 	font-family: $ff_main;
 	min-height: 100vh;
 	overflow-x: hidden;
-	color: $clr_dark_2;
-	font-size: $fz_main;
+	color: $clr_dark;
+	font-size: $fsz_main;
 	line-height: 1.4;
 	transition: all $trans;
 	background: transparent;
@@ -28,7 +28,7 @@ html {
 		align-items: center;
 
 		&:hover {
-			path {
+			svg {
 				fill: $clr_primary;
 			}
 
@@ -47,7 +47,7 @@ html {
 		width: 50px;
 		height: 50px;
 
-		path {
+		svg {
 			fill: $clr_main;
 			transition: all .2s;
 		}
