--- a/src/assets/styles/layout/typo.scss
+++ b/src/assets/styles/layout/typo.scss
@@ -1,39 +1,74 @@
-.test {
-	opacity: 1;
+%h1,
+%h2,
+%h3,
+%h4,
+%h5,
+%h6 {
+	margin: 0 0 em(1);
+	line-height: 1.2;
+	font-weight: 300;
+}
+
+%h1 {
+	font-size: $fsz_h1;
+	line-height: .8;
+	font-family: $ff_exbold;
+}
+
+%h2 {
+	font-size: $fsz_h2;
+	font-weight: 400;
+}
+
+%h3 {
+	font-size: $fsz_h3;
+	font-weight: 500;
+}
+
+%h4 {
+	font-size: $fsz_h4;
+	font-weight: 400;
+}
+
+%h5 {
+	font-size: $fsz_h5;
+}
+
+%h6 {
+	font-size: $fsz_h6;
 }
 
 h1,
-h2,
-h3,
-h4,
-h5,
-h6{
-	font-weight: 300;
-	line-height: 1.2;
-	margin-top: 0;
-	margin-bottom: 2rem;
-}
-
 .h1 {
-	font-size: 4rem;
+	@extend %h1;
 }
 
+h2,
 .h2 {
-	font-size: 3.2rem;
+	@extend %h2;
 }
 
+h3,
 .h3 {
-	font-size: 2.6rem;
+	@extend %h3;
 }
 
+h4,
 .h4 {
-	font-size: 2rem;
+	@extend %h4;
 }
 
+h5,
 .h5 {
-	font-size: 1.4rem;
+	@extend %h5;
 }
 
+h6,
 .h6 {
-	font-size: 0.5rem;
+	@extend %h6;
+}
+
+a {
+	transition: all $trans;
+	text-decoration: none;
 }
