--- a/src/assets/styles/utils/variables.scss
+++ b/src/assets/styles/utils/variables.scss
@@ -1,9 +1,7 @@
 $ff_main: 'CirceRegular', Helvetica, Arial, sans-serif;
 $ff_bold: 'CirceBold', Helvetica, Arial, sans-serif;
 $ff_exbold: 'Circe-ExtraBold', Helvetica, Arial, sans-serif;
-$ff_seg: 'Segoe UI', Helvetica, Arial, sans-serif;
-$ff_segbold: 'Segoe UI Bold', Helvetica, Arial, sans-serif;
-$fz_main:16px;
+$fsz_main:16px;
 $margin-padding:10px;
 $width_xs_s:550px;
 $width_xs:767px;
@@ -11,20 +9,39 @@ $width_md:1024px;
 $width_lg:1169px;
 $width_lgx:1366px;
 
-$m_em:() !global;
-$m_rem:() !global;
+//FONTS
+$fsz_h1:4em;
+$fsz_h2:2.6em;
+$fsz_h3:1.95em;
+$fsz_h4:1.25em;
+$fsz_h5:1.125em;
+$fsz_h6:1em;
+$fsz_small:0.85em;
+$fw_b: 700;
 
-@for $i from 1 through 10 {
-	$val: $margin-padding / $fz_main * $i;
-	$m_em: append($m_em, $val + em);
-	$m_rem: append($m_rem, $val + rem);
+//COLORS
+$clr_main:#e12b2b;
+$clr_main_dark: #c12929;
+$clr_disabled_bg: #aaafb3;
+$clr_white: #fff;
+$clr_grey: #cdd1da;
+$clr_primary:#002250;
+$clr_error:#e12b2b;
+$clr_highlight:#77ab60;
+$clr_yell: #ffd554;
+$clr_border:#e8e8e8;
+$clr_black: #000;
+$clr_dark: #4e4e4e;
+
+$trans:.3s ease;
+$br_r: 4px;
+
+%bgir {
+	background: no-repeat center/cover;
 }
 
-@function em-parent($fs, $m_em) {
-	$m_px: ($m_em / 1em) * ($fz_main / 1px);
-	$fsm_px: ($fz_main / 1px) * ($fs / 1em);
-
-	@return $m_px / $fsm_px+em;
+%bgin {
+	background: no-repeat center/contain;
 }
 
 %op_0 {
@@ -37,67 +54,35 @@ $m_rem:() !global;
 	visibility: visible;
 }
 
-$fs_025: .75em;
-$fs_030: .8em;
-$fs_05: .875em;
-$fs_1: 1em;
-$fs_15: 1.125em;
-$fs_175: 1.325em;
-$fs_2: 1.5em;
-$fs_25: 2em;
-$fs_3: 2.25em;
+$m_em:() !global;
+$m_rem:() !global;
 
-$fw_b: 700;
-//COLORS
-$clr_main:#e12b2b;
-$clr_main_1: #c12929;
-$clr_main_2: #9ae8ac;
-$clr_main_h: #edfff2;
-$clr_yell: #ffd554;
-$clr_light:#c0c6ca;
-$clr_darklight:#777;
-$disabled_bg: #aaafb3;
-$disabled_cl: #fff;
-$clr_primary:#002250;
-$clr_error:#e12b2b;
-$clr_highlight:#77ab60;
-$clr_border:#eaf1f8;
-$clr_wh:white;
-$clr_blue:#284461;
-$clr_gray_1:#7382a0;
-$clr_gray_2: #ddd;
-$clr_gray_3: #f7f7f7;
-$clr_gray_4: #878787;
-$clr_gray:#f9f9f9;
-$clr_dark: #000;
-$clr_dark_l: #1b2e34;
-$clr_dark_2: #4e4e4e;
-$clr_dark_3: #161616;
-$clr_black: #111;
-
-$trans:.3s ease;
-$trans15:.15s ease;
-
-%bgir {
-	background: no-repeat center/cover;
+@for $i from 1 through 10 {
+	$val: $margin-padding / $fsz_main * $i;
+	$m_em: append($m_em, $val + em);
+	$m_rem: append($m_rem, $val + rem);
 }
 
-%bgin {
-	background: no-repeat center/contain;
+@function em-parent($fs, $m_em) {
+	$m_px: ($m_em / 1em) * ($fsz_main / 1px);
+	$fsm_px: ($fsz_main / 1px) * ($fs / 1em);
+
+	@return $m_px / $fsm_px+em;
 }
 
-$bxsh_1: 0 8px 80px -22px rgba(0, 34, 80, 0.35);
-$bxsh_3: 0 20px 80px -22px rgba(0, 34, 80, 0.35);
-$bxsh: 0 4px 24px 7px rgba(211, 218, 228, 0.4);
-$bxsh_2: 0 4px 34px -2px rgba(211, 218, 228, 0.7);
+@function em($step) {
+	@return nth($m_em, $step);
+}
 
-$br_r8:8px;
-$br_r: 4px;
+@function rem($step) {
+	@return nth($m_rem, $step);
+}
+
 //ICONS
 $icon_width:20px;
 $icon_bg: url('/dist/img/sprite.svg');
 
 //GRID
-$grid-width:1210px;
-$grid-gutter:40px;
-$grid-columns:12;
+$grid_width:1210px;
+$grid_gutter:40px;
+$grid_columns:12;
