--- a/src/templates/blocks/carousel/carousel.scss
+++ b/src/templates/blocks/carousel/carousel.scss
@@ -5,7 +5,7 @@
 	&__inner {
 		height: 400px;
 		background-color: rgba($clr_main, .5);
-		color: #fff;
+		color: $clr_white;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -35,13 +35,13 @@
 			&:first-child {
 				background: none;
 
-				@include arrow($clr_wh, 3px, 13px, 'left');
+				@include arrow($clr_white, 3px, 13px, 'left');
 			}
 
 			&:last-child {
 				background: none;
 
-				@include arrow($clr_wh, 3px, 13px, 'right');
+				@include arrow($clr_white, 3px, 13px, 'right');
 			}
 		}
 	}
