--- a/src/templates/blocks/icon/icon.pug
+++ b/src/templates/blocks/icon/icon.pug
@@ -2,3 +2,5 @@ mixin icon(name='null')
     .icon
         svg.icon__svg&attributes(attributes)
             use(xlink:href=`${imgPath}svg-sprite/sprite.svg#${name}`)
+mixin img(name='null', alt)
+    img(src=`./assets/images/${name}` alt=alt)&attributes(attributes)
