--- a/src/templates/_mixins/list.pug
+++ b/src/templates/_mixins/list.pug
@@ -4,6 +4,7 @@
 include ../blocks/btn/btn
 include ../blocks/icon/icon
 include ../blocks/form__field/form__field
+include ../blocks/socials/socials
 
 mixin title(...titleParts)
 	- var t = "Your Website Name"
