--- a/src/assets/styles/common/forms.scss
+++ b/src/assets/styles/common/forms.scss
@@ -69,14 +69,15 @@ input[type="checkbox"] {
 		position: relative;
 		padding: 0 0 0 27px;
 		cursor: pointer;
+		line-height: 1.35;
 		font-size: 12px;
 		color: $clr_dark;
 
 		&:before {
 			content: '';
-			margin: auto;
+			margin: 0 auto auto;
 			position: absolute;
-			top: -2px;
+			top: -1px;
 			bottom: 0;
 			left: 0;
 			width: 15px;
@@ -91,7 +92,7 @@ input[type="checkbox"] {
 			content: '';
 			position: absolute;
 			left: 6px;
-			top: 1px;
+			top: 2px;
 			width: 3px;
 			height: 7px;
 			border: solid $clr_white;
