--- a/src/assets/styles/layout/general.scss
+++ b/src/assets/styles/layout/general.scss
@@ -4,7 +4,7 @@
 
 body {
 	font-family: $ff_main;
-	min-height: 100vh;
+	height: 100%;
 	overflow: hidden;
 	color: $clr_main;
 	font-size: $fsz_main;
