--- a/src/templates/pages/index.scss
+++ b/src/templates/pages/index.scss
@@ -1,10 +1,15 @@
 .section {
 	&-one {
-		min-height: 100vh;
 		display: flex;
 		transition: opacity $trans;
 		overflow: hidden;
-		position: relative;
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		width: 100%;
+		height: 100%;
 
 		&.c-spinner {
 			&:before {
