--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -1,6 +1,6 @@
 extends ../_layouts/master.pug
 block title
-	+title('Redsoft UI Kit')
+	+title('html UI Kit')
 block content
 	+b.SECTION.section-one.js-spinner.c-spinner.js-main
 		+e.logo.js-animate-logo.section-one__logo-top
