--- a/src/templates/pages/success.pug
+++ b/src/templates/pages/success.pug
@@ -2,7 +2,10 @@ extends ../_layouts/master.pug
 block title
     +title('html UI Kit')
 block content
-    +b.SECTION.section-one
+    +b.SECTION.section-one.js-spinner.c-spinner
+        +e.logo.js-animate-logo.section-one__logo-top
+            a(href='/')
+                +imgSvg('logo-b')
         +e.DIV.callback
             +e.ASIDE.sidebar
                 +e.sidebar-container
