--- a/src/assets/styles/utils/variables.scss
+++ b/src/assets/styles/utils/variables.scss
@@ -35,7 +35,7 @@ $clr_grey: #cdd1da;
 $clr_primary:#0d62b1;
 $clr_error:#e12b2b;
 $clr_highlight:#77ab60;
-$clr_yell: #ffd554;
+$clr_yell: #f65b47;
 $clr_border:#c6ced3;
 $clr_black: #000;
 $clr_dark: #949494;
