--- a/src/templates/blocks/socials/socials.pug
+++ b/src/templates/blocks/socials/socials.pug
@@ -3,7 +3,7 @@ mixin socials()
         +e.open.js-socials-btn-open
            +imgSvg('share')
         ul
-            each item in ['facebook', 'vk', 'twitter', 'instagram', 'mail-ru']
+            each item in ['facebook', 'vk', 'twitter', 'mail-ru']
                 li
                     a(target="_blank" href='/')
                         +imgSvg(item)
