--- a/src/templates/pages/index.scss
+++ b/src/templates/pages/index.scss
@@ -10,6 +10,7 @@
 		right: 0;
 		width: 100%;
 		height: 100%;
+		-webkit-overflow-scrolling: touch;
 
 		&.c-spinner {
 			&:before {
@@ -308,10 +309,14 @@
 			display: flex;
 
 			@include media($width_md) {
+				position: fixed;
 				flex-wrap: wrap;
 				height: auto;
-				overflow-y: auto;
+				overflow-x: hidden;
+				-webkit-overflow-scrolling: touch;
+				overflow-y: scroll;
 				align-items: flex-start;
+				flex: 1 1;
 			}
 
 			@include posReset();
