--- a/src/templates/pages/index.scss
+++ b/src/templates/pages/index.scss
@@ -442,7 +442,7 @@
 					width: 100%;
 					height: auto;
 					left: 0;
-					position: unset;
+					position: relative;
 					overflow: hidden;
 				}
 
