--- a/src/templates/pages/index.scss
+++ b/src/templates/pages/index.scss
@@ -11,6 +11,11 @@
 		width: 100%;
 		height: 100%;
 		-webkit-overflow-scrolling: touch;
+		touch-action: none !important;
+
+		&.c-animation-last-step {
+			touch-action: pan-y !important;
+		}
 
 		&.c-spinner {
 			&:before {
@@ -442,7 +447,7 @@
 					width: 100%;
 					height: auto;
 					left: 0;
-					position: relative;
+					position: initial;
 					overflow: hidden;
 				}
 
