--- a/src/templates/pages/index.scss
+++ b/src/templates/pages/index.scss
@@ -11,10 +11,10 @@
 		width: 100%;
 		height: 100%;
 		-webkit-overflow-scrolling: touch;
-		touch-action: none !important;
+		//touch-action: none !important;
 
 		&.c-animation-last-step {
-			touch-action: pan-y !important;
+			//touch-action: pan-y !important;
 		}
 
 		&.c-spinner {
