--- a/src/templates/pages/success.pug
+++ b/src/templates/pages/success.pug
@@ -9,7 +9,7 @@ block content
                     +imgSvg('logo-b')
             +e.ASIDE.sidebar
                 +e.sidebar-container
-                    +e.H2.sidebar-title Один рубль в фонд помощи хрупким
+                    +e.H2.sidebar-title 50 рублей в фонд помощи хрупким
                     +e.DIV.sidebar-separator
                     +e.H2.sidebar-title Незаметно для тебя, но огромная помощь для хрупких
             +e.form-scroll-wrapper
